usingflex to fix descrip spacing

--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,9 @@
   color: #fc4c02;
   padding: 0.5rem;
   font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 800px) {
   .projectGrid {
